# Lap_1

FirstDemo/FirstDemo/: AppDelegate.swift  ViewController.swift
FirstDemo/FirstDemo.xcodeproj/: project.pbxproj
FirstDemo/FirstDemo.xcodeproj/project.xcworkspace/xcuserdata/lengocquoclich.xcuserdatad/: UserInterfaceState.xcuserstate
FirstDemo/FirstDemo/Base.lproj/: Main.storyboard
FirstDemo/FirstDemoTests/: FirstDemoTests.swift
FirstDemo/FirstDemoUITests/: FirstDemoUITests.swift  FirstDemoUITestsLaunchTests.swift
Graphics/: CMakeLists.txt  a.out  main.cpp
Iterative_lab8/: CMakeLists.txt  main.cpp
Jacobi_Gauss_Seidel_lab5 /: CMakeLists.txt  main.cpp
Lab1/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  main.cpp
Lap2/: CMakeLists.txt  main.cpp
Metal_app/Metal_app/: Metal_app.metal
Metal_app/Metal_app.xcodeproj/: project.pbxproj
Metal_app/Metal_app.xcodeproj/project.xcworkspace/xcuserdata/lengocquoclich.xcuserdatad/: UserInterfaceState.xcuserstate
Method_Cholesky_Lab3/: CMakeLists.txt  main.cpp
Method_LU_Lab2/: CMakeLists.txt  main.cpp
MyPlayground.playground/: Contents.swift
MyPlayground.playground/playground.xcworkspace/xcuserdata/lengocquoclich.xcuserdatad/: UserInterfaceState.xcuserstate
QR__Algorithm_Lab4 /: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
SOR_lab6/: CMakeLists.txt  main.cpp
jacobi__eigenvalue_lab7/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
polymorphism/: box.h  carton.h  toughpack.h
untitled/: Carton.h  CerealPack.h  Content.h  box.h
(+1 files in other folders)
